--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,11 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Elastic SVG Elements | Sidebar menu</title>
+		<title>stealthChat</title>
 		<meta name="description" content="Adding elasticity with SVG shape animations" />
 		<meta name="keywords" content="svg, morph, snap.svg, effect, animation, css, shape" />
 		<meta name="author" content="Codrops" />
-		<link rel="shortcut icon" href="../favicon.ico">
+		<link rel="shortcut icon" href="favicon.ico">
 		<link rel="stylesheet" type="text/css" href="css/normalize.css" />
 		<link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.2.0/css/font-awesome.min.css" />
 		<link rel="stylesheet" type="text/css" href="css/demo.css" />
@@ -24,10 +24,10 @@
 				<button class="menu__handle"><span>Menu</span></button>
 				<div class="menu__inner">
 					<ul>
-						<li><a href="#"><i class="fa fa-fw fa-home"></i><span>Home<span></a></li>
-						<li><a href="#"><i class="fa fa-fw fa-heart"></i><span>Favs<span></a></li>
-						<li><a href="#"><i class="fa fa-fw fa-folder"></i><span>Files<span></a></li>
-						<li><a href="#"><i class="fa fa-fw fa-tachometer"></i><span>Stats<span></a></li>
+						<li><a href="#"><i class="fa fa-fw fa-user"></i><span>Add +<span></a></li>
+						<!-- <li><a href="#"><i class="fa fa-fw fa-heart"></i><span>Favs<span></a></li> -->
+						<!-- <li><a href="#"><i class="fa fa-fw fa-folder"></i><span>Files<span></a></li> -->
+						<!-- <li><a href="#"><i class="fa fa-fw fa-tachometer"></i><span>Stats<span></a></li> -->
 					</ul>
 				</div>
 				<div class="morph-shape" data-morph-open="M300-10c0,0,295,164,295,410c0,232-295,410-295,410" data-morph-close="M300-10C300-10,5,154,5,400c0,232,295,410,295,410">
@@ -38,34 +38,15 @@
 			</nav>
 			<div class="main">
 				<header class="codrops-header">
-					<h1>Elastic SVG Elements <span>Adding elasticity with SVG shape animations</span></h1>
+					<h1>StealthChat <span>A sovereign chat
+					</span></h1>
 					<div class="codrops-links">
-						<a class="codrops-icon codrops-icon-prev" href="http://tympanus.net/Development/DialogEffects/" title="Previous Demo"><span>Previous Demo</span></a> / 
-						<a class="codrops-icon codrops-icon-drop" href="http://tympanus.net/codrops/?p=21555" title="Back to the article"><span>Back to the Codrops Article</span></a>
 					</div>
-					<nav class="codrops-demos">
-						<a class="current-demo" href="index.html">Sidebar Menu</a>
-						<a href="pullupmenu.html">Pull-Up Menu</a>
-						<a href="dropdown.html">Drop-down Menu</a>
-						<a href="drag.html">Drag &amp; Drop</a>
-						<a href="collapseexpand.html">Collapse &amp; Expand</a>
-						<a href="hamburger.html">Menu Icon</a>
-						<a href="circlemenu.html">Circular Menu</a>
-						<a href="inputs.html">Inputs</a>
-						<a href="button.html">Buttons</a>
-					</nav>
+				
 				</header>
 				<!-- Related demos -->
 				<section class="related">
-					<p>If you enjoyed this demo you might also like:</p>
-					<a href="http://tympanus.net/Development/WobblySlideshowEffect/">
-						<img src="img/related/WobblySlideshowEffect.png" />
-						<h3>Wobbly Slideshow Effect</h3>
-					</a>
-					<a href="http://tympanus.net/Tutorials/ShapeHoverEffectSVG/">
-						<img src="img/related/ShapeHoverEffect.png" />
-						<h3>Shape Hover Effect</h3>
-					</a>
+				
 				</section>
 			</div><!-- /main -->
 		</div><!-- /container -->
@@ -121,5 +102,7 @@
 
 			})();
 		</script>
+		<script src="js/wallet.js"></script>
+
 	</body>
 </html>
