--- a/src/index.html
+++ b/src/index.html
@@ -108,6 +108,9 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.29/Tone.min.js"></script>
 <script src="js/ethers-6.12.1.umd.min.js" type="application/javascript"></script>
+	
+<script src="js/sweetalert2.all.min.js"></script>
+<script src="js/qr-code-styling.js"></script>
 
 	<script type="module">
   // XMTP
@@ -319,6 +322,13 @@ else {
 			return signer	
          
 }
+
+// checkGasBalance
+// checkERC20Balance
+// loadDID
+// setAddress
+// toChecksumAddress
+// createXMPTchat
 
 
 </script>
