dirty logo and stuff

--- a/src/index.html
+++ b/src/index.html
@@ -112,6 +112,8 @@
 <script src="js/sweetalert2.all.min.js"></script>
 <script src="js/qr-code-styling.js"></script>
 
+<script src="js/dictionary.js"></script>
+
 	<script type="module">
   // XMTP
   import { Client } from '@xmtp/xmtp-js'
